# liquipedia_dota2_ical

./: .gitignore  README.md  dota2-matches.ics  pyproject.toml
.github/workflows/: update-calendar.yml
src/liquipedia_ical/: __init__.py  __main__.py  calendar.py  cli.py  matches.py
tests/: test_calendar.py  test_matches.py
