[project]
name = "liquipedia-ical"
version = "0.1.0"
description = "Generate an iCalendar feed from Liquipedia's Dota 2 matches page"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12,<5",
]

[project.scripts]
liquipedia-ical = "liquipedia_ical.cli:main"

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/liquipedia_ical"]

