[project]
name = "liquipedia-dota2-ical"
version = "0.1.0"
description = "Generate an iCalendar feed of Liquipedia Tier 1 Dota 2 matches"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12,<5",
]

[project.scripts]
liquipedia-dota2-ical = "liquipedia_ical.cli:main"

[project.urls]
Repository = "https://github.com/zizhengwu/liquipedia_dota2_ical"

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/liquipedia_ical"]
